; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_irq-msc01.c_msc_bind_eic_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_irq-msc01.c_msc_bind_eic_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSC01_IC_RAMW = common dso_local global i32 0, align 4
@MSC01_IC_RAMW_ADDR_SHF = common dso_local global i32 0, align 4
@MSC01_IC_RAMW_DATA_SHF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @msc_bind_eic_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msc_bind_eic_interrupt(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @MSC01_IC_RAMW, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @MSC01_IC_RAMW_ADDR_SHF, align 4
  %8 = shl i32 %6, %7
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @MSC01_IC_RAMW_DATA_SHF, align 4
  %11 = shl i32 %9, %10
  %12 = or i32 %8, %11
  %13 = call i32 @MSCIC_WRITE(i32 %5, i32 %12)
  ret void
}

declare dso_local i32 @MSCIC_WRITE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
